--- a/src/app/list-os/list-os.component.css
+++ b/src/app/list-os/list-os.component.css
@@ -4,3 +4,12 @@ mat-table{
 mat-header-cell{
    font-size: 16px;
 }
+.example-header {
+  min-height: 64px;
+  padding: 8px 24px 0;
+}
+
+.mat-form-field {
+  font-size: 14px;
+  width: 100%;
+}
