--- a/src/app/adc-pecas/adc-pecas.component.html
+++ b/src/app/adc-pecas/adc-pecas.component.html
@@ -19,8 +19,10 @@
       </mat-paginator>  
     <div *ngFor="let c of obj">
       {{c.NOME}}
-    </div>
-    <button mat-mini-fab color="primary" id="saves" [mat-dialog-close]="obj" cdkFocusInitial><mat-icon>done</mat-icon></button>
+    </div>  
+      <div *ngIf="passed">
+      <button  mat-mini-fab color="primary" id="saves"  [mat-dialog-close]="obj" cdkFocusInitial ><mat-icon>done</mat-icon></button>
+      </div>
   </mat-tab>
   <mat-tab label="Serviço">
 
@@ -44,6 +46,8 @@
       <div *ngFor="let c of obj">
         {{c.NOME}}
       </div>
-      <button mat-mini-fab color="primary" id="saves" [mat-dialog-close]="obj" cdkFocusInitial><mat-icon>done</mat-icon></button>
+      <div *ngIf="passed">
+      <button  mat-mini-fab color="primary" id="saves"  [mat-dialog-close]="obj" cdkFocusInitial ><mat-icon>done</mat-icon></button>
+      </div>
   </mat-tab>
 </mat-tab-group>
