--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 
-    <mat-toolbar color="primary">
+    <mat-toolbar color="warn">
         <mat-icon>directions_car</mat-icon>
         <button mat-button [matMenuTriggerFor]="menu">Cadastro</button>
             <mat-menu #menu="matMenu">
