metade do pagamento feito

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-	
+	<!--João paulo referente as images que vc colocou aq, tenta diminuir a imagem para poder mostrar os dados sobres as os, pois como so uma pessoa q vai utilizar o sistema e nao os clientes, n tem o pq meio q divulgar, se quiser da uma lida em como fazer uma postagem automatica com api(coisa bem simples e interresante), vale a pena pra vc estudar, se conseguir so suba se funcionar-->
 	<input type="radio" id="i1" name="images" checked />
 	<input type="radio" id="i2" name="images" />
 	
