--- a/src/app/edit-os/edit-os.component.html
+++ b/src/app/edit-os/edit-os.component.html
@@ -34,7 +34,7 @@
         <mat-form-field id="sit">
           <mat-label>Situação</mat-label>
           <mat-select [(value)]="select" (selectionChange)="teste()">
-         
+            <mat-option value="Finalizado">Finalizado</mat-option>
               <mat-option value="Aprovado">Aprovado</mat-option>
               <mat-option value="Espera">Espera</mat-option>
               <mat-option value="Negado">Negado</mat-option>
@@ -70,7 +70,7 @@
   </table>
 <mat-card><div style=" display: flex;   justify-content: space-between;">
   Total: R${{total |number:'.2'}}
-  <button mat-raised-button  style="margin-left: 15%;  background-color: rgb(87, 212, 87); color: white;" (click)="pag()">Pagamento</button>
+  <button mat-raised-button [disabled]="bottonCred"  style="margin-left: 15%;  background-color: rgb(87, 212, 87); color: white;" (click)="pag()">Pagamento</button>
 </div>
 </mat-card>
 </mat-card>
