--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -22,8 +22,8 @@
             <mat-menu #os="matMenu">
                 <button mat-menu-item routerLink="/addos">Criar OS</button>
                <button mat-menu-item routerLink="/listos">OS Aberto</button>
-               <button mat-menu-item routerLink="/">OS Negado</button>
-               <button mat-menu-item routerLink="/">OS Finalizados</button>
+               <button mat-menu-item routerLink="/listosneg">OS Negado</button>
+               <button mat-menu-item routerLink="/listosfin">OS Finalizados</button>
                 
             </mat-menu>
             
