Fiz Algumas Modificaçoes nas telas ( Cadastro>Cliente e Funcionario)

--- a/src/app/EdCep/cep.component.html
+++ b/src/app/EdCep/cep.component.html
@@ -1,6 +1,6 @@
 <div>
 <form >
-  <h3>Endereço:</h3>
+  <h3>Endereço</h3>
     <mat-form-field appearance="legacy">
         <mat-label>CEP</mat-label>
         <input matInput placeholder="00000-000"  name="cep" [(ngModel)]="cep.cep"  required> 
