--- a/src/app/register-client/register-client.component.html
+++ b/src/app/register-client/register-client.component.html
@@ -1,10 +1,8 @@
 
-    <div class="mat-card" style=" border: 1px solid;
-    padding: 10px;
-    box-shadow: 5px 10px 8px 10px #888888;
-    margin-top: 2px;">
+    <div class="mat-card" style=" border: 0px solid;
+    padding: 60px;">
  
- <h2>Cadastro de Clientes:</h2>
+ <h2>Cadastro de Clientes</h2>
 <form (ngSubmit)="onSubmit()" #formClient="ngForm" >
   
 <mat-form-field appearance="legacy">
@@ -42,6 +40,7 @@
   <mat-radio-group aria-label="Tipo de Pessoa" style="display: flex;flex-direction: column; margin-left: 34%; margin-top: -4%;"
     [(ngModel)]="cliente.PEOPLE" name="people" required>
     <mat-radio-button value="Juridica">Pessoa Juridica</mat-radio-button>
+    &nbsp;
     <mat-radio-button value="Fisica">Pessoa Fisica</mat-radio-button>
   </mat-radio-group>
   <br>
@@ -61,7 +60,7 @@
       <mat-hint>Complemento da casa</mat-hint>
       </mat-form-field>
  <button mat-raised-button color="primary"style="margin-left:5%" [disabled]="!formClient.valid " >Salvar</button>
-<button mat-raised-button type="reset" color=""style="margin-left:5px; background-color:yellow;">Limpar</button>
+<button mat-raised-button type="reset" color=""style="margin-left:5px; background-color:#e00000">Limpar</button>
 </form>
 
 </div>
