--- a/src/app/add-fun/add-fun.component.css
+++ b/src/app/add-fun/add-fun.component.css
@@ -2,7 +2,9 @@ mat-form-field{
     margin-right: 20px;
     margin-left: 20px;
 }
-
+h2{
+    color: #3F51B5;
+}
 .snack_ok{
     background: darkseagreen;
     color: black;
