Relatorios pela metade

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -13,7 +13,7 @@
             <button mat-button [matMenuTriggerFor]="list">Listagem</button>
             <mat-menu #list="matMenu">
                 <button mat-menu-item routerLink="/list">Clientes</button>
-                <button mat-menu-item routerLink="/listos">Funcionários</button>
+                <button mat-menu-item routerLink="/listfun">Funcionários</button>
                
                 
                 
@@ -26,6 +26,7 @@
                <button mat-menu-item routerLink="/listosfin">OS Finalizados</button>
                 
             </mat-menu>
+            <button mat-button  routerLink="/relatorio">Relátorios</button>
             
   
     </mat-toolbar>
