--- a/src/app/add-servico/add-servico.component.html
+++ b/src/app/add-servico/add-servico.component.html
@@ -51,7 +51,7 @@ margin-top: 2px;">
         </ng-container> 
         <ng-container matColumnDef="ganhodono">  
             <mat-header-cell *matHeaderCellDef> Valor Ganho </mat-header-cell>  
-            <mat-cell *matCellDef="let c"> R${{c.GANHODONO | number : '.2'}} </mat-cell>  
+            <mat-cell *matCellDef="let c"> R${{c.GANHO | number : '.2'}} </mat-cell>  
         </ng-container>  
         <ng-container matColumnDef="ganhoFuncionario">  
             <mat-header-cell *matHeaderCellDef> Funciorio Recebe </mat-header-cell>  
