--- a/src/app/hist-pag/hist-pag.component.html
+++ b/src/app/hist-pag/hist-pag.component.html
@@ -15,7 +15,7 @@
     <ng-container matColumnDef="Valor Total">  
         <mat-header-cell *matHeaderCellDef>Valor Total</mat-header-cell>  
         <mat-cell *matCellDef="let c" style="    margin-left: -3%;
-        margin-right: 3%;"> R${{c.TOTAL}} </mat-cell>  
+        margin-right: 3%;"> R${{TOTAL}} </mat-cell>  
     </ng-container> 
     <ng-container matColumnDef="Pago">  
         <mat-header-cell *matHeaderCellDef> Pago</mat-header-cell>  
