--- a/src/app/relatorio/relatorio.component.html
+++ b/src/app/relatorio/relatorio.component.html
@@ -2,18 +2,17 @@
     <h3>Pagamento dos Funcionarios</h3>
     <mat-form-field appearance="legacy">
         <mat-label>Data Inicial</mat-label>
-        <input matInput [matDatepicker]="picker" (dateInput)="addEvent($event)"name="datIn" [(ngModel)]="datIn" required>
-        <mat-datepicker-toggle matSuffix [for]="picker" ></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
+        <input matInput [matDatepicker]="picker" (dateInput)="addEvent($event)"name="datIn" [(ngModel)]="datIn" disabled   required>
+        <mat-datepicker-toggle matSuffix [for]="picker" disabled="false"></mat-datepicker-toggle>
+        <mat-datepicker #picker disabled="false" ></mat-datepicker>
       </mat-form-field> 
       <mat-form-field appearance="legacy">
         <mat-label>Data Final</mat-label>
-        <input matInput [matDatepicker]="pickerg" (dateInput)="addEventFi($event)"name="datFin" [(ngModel)]="datFin" required>
+        <input matInput [matDatepicker]="pickerg" (dateInput)="addEventFi($event)"name="datFin" [(ngModel)]="datFin"  disabled required>
         <mat-datepicker-toggle matSuffix [for]="pickerg" ></mat-datepicker-toggle>
-        <mat-datepicker #pickerg></mat-datepicker>
+        <mat-datepicker #pickerg disabled="false" ></mat-datepicker>
       </mat-form-field> 
-      <button mat-mini-fab color="primary" [disabled]="!formOS.valid "><mat-icon>done</mat-icon></button>
-
+      <button mat-mini-fab color="primary"><mat-icon>done</mat-icon></button>
 
 </form>
 
