--- a/src/app/relatorio-funcionario/relatorio-funcionario.component.html
+++ b/src/app/relatorio-funcionario/relatorio-funcionario.component.html
@@ -1,1 +1,4 @@
-<p>relatorio-funcionario works!</p>
+<mat-card>
+    <p>Funcionario: {{nome}}</p>
+    <p>R${{total| number : '.2'}}</p>
+</mat-card>
