--- a/src/app/relatorio/relatorio.component.html
+++ b/src/app/relatorio/relatorio.component.html
@@ -1,5 +1,13 @@
 <form (ngSubmit)="onSubmit()" #formOS="ngForm">
     <h3>Pagamento dos Funcionarios</h3>
+    <mat-form-field>
+      <mat-label>Funcionario</mat-label>
+      <mat-select [(ngModel)]="FUNCIONARIO" name="nameFuncio"  required>
+        <mat-option *ngFor="let f of nameFuncio" [value]="f" >
+          {{f}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
     <mat-form-field appearance="legacy">
         <mat-label>Data Inicial</mat-label>
         <input matInput [matDatepicker]="picker" (dateInput)="addEvent($event)"name="datIn" [(ngModel)]="datIn" disabled   required>
