--- a/src/app/list-fun/list-fun.component.html
+++ b/src/app/list-fun/list-fun.component.html
@@ -1,5 +1,6 @@
-
-<h1>Funcionarios</h1>
+<mat-card style=" border: 0px solid;
+padding: 20px;">
+<h1>Funcionários</h1>
 <mat-card>
 <mat-table #Table [dataSource]="DataTable">  
 
