--- a/src/app/add-estoque/add-estoque.component.css
+++ b/src/app/add-estoque/add-estoque.component.css
@@ -1,3 +1,9 @@
 mat-form-field{
-    padding: 10px;
+    margin-right: 20px;
+    margin-left: 20px;
+
+}
+
+mat-card-title{
+    color: #3F51B5;
 }
