--- a/src/app/add-os/add-os.component.html
+++ b/src/app/add-os/add-os.component.html
@@ -1,9 +1,7 @@
-<div class="mat-card" style=" border: 1px solid;
-padding: 10px;
-box-shadow: 5px 10px 8px 10px #888888;
-margin-top: 2px;">
+<div class="mat-card" style=" border: 0px solid;
+padding: 10px;">
 <form (ngSubmit)="onSubmit()" #formOS="ngForm">
-  <h3>Cadastro de Ordem de Serviço:</h3>
+  <h2>Cadastro de Ordem de Serviço:</h2>
     <mat-form-field appearance="legacy">
       <input type="text" placeholder="Nome" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto" [(ngModel)]="os.CLIENTE" name="nome" required>
       <mat-autocomplete #auto="matAutocomplete">
