--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 
     <mat-toolbar color="primary">
-        <mat-icon>directions_car</mat-icon>
+        <a mat-icon-button routerLink="/index"><mat-icon>directions_car</mat-icon></a>
         <button mat-button [matMenuTriggerFor]="menu">Cadastro</button>
             <mat-menu #menu="matMenu">
                 <button mat-menu-item routerLink="/registerclient">Cliente</button>
