--- a/src/app/relatorio/relatorio.component.css
+++ b/src/app/relatorio/relatorio.component.css
@@ -1,3 +1,10 @@
 mat-form-field{
-    padding: 5px;
+    padding: 10px;
+    margin-left: 20px;
+    margin-top: 20px;
+}
+h2{
+    color: #3F51B5;
+    margin-left: 20px;
+    margin-top: 20px;
 }
